--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="col-md-3">
         <h1 class="logo me-auto"><a href="index.html">
           <!-- <span>Lit</span>uxe -->
-          <img src="/assets/img/logo.png" alt="">
+          <img src="assets/img/logo.png" alt="">
         </a></h1>
     </div>
     <div class="col-md-9">
@@ -155,7 +155,7 @@
       <div class="carousel-inner" role="listbox">
 
         <!-- Slide 1 -->
-        <div class="carousel-item active"  style="background-image: url(/assets/img/slide/slider2.jpg);">
+        <div class="carousel-item active"  style="background-image: url(assets/img/slide/slider2.jpg);">
           <div class="carousel-container">
             <div class="row">
             <div class="col-md-6">
@@ -185,7 +185,7 @@
         </div>
 
         <!-- Slide 2 -->
-        <div class="carousel-item" style="background-image: url(/assets/img/slide/slide1.jpg);">
+        <div class="carousel-item" style="background-image: url(assets/img/slide/slide1.jpg);">
           <div class="carousel-container">
             <div class="row">
               <div class="col-md-6">
@@ -231,7 +231,7 @@
           </div>
         </div>
         <!-- slider 4 -->
-        <div class="carousel-item"   style="background-image: url(/assets/img/slide/slider2.jpg);">
+        <div class="carousel-item"   style="background-image: url(assets/img/slide/slider2.jpg);">
           <div class="carousel-container">
             <div class="row">
             <div class="col-md-6">
@@ -253,7 +253,7 @@
           </div>
         </div>
         <!-- slider 5 -->
-        <div class="carousel-item "  style="background-image: url(/assets/img/slide/slider2.jpg);">
+        <div class="carousel-item "  style="background-image: url(assets/img/slide/slider2.jpg);">
           <div class="carousel-container">
             <div class="row">
             <div class="col-md-6">
@@ -339,7 +339,7 @@
           
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="cardcontainer">
-             <div class="photo"> <img src="/assets/img/services/floor.jpg">
+             <div class="photo"> <img src="assets/img/services/floor.jpg">
                  <!-- <div class="photos">Photos</div> -->
              </div>
 
@@ -384,7 +384,7 @@
           </div>
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="cardcontainer">
-             <div class="photo"> <img src="/assets/img/services/floor.jpg">
+             <div class="photo"> <img src="assets/img/services/floor.jpg">
                  <!-- <div class="photos">Photos</div> -->
              </div>
 
@@ -429,7 +429,7 @@
           </div>
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="cardcontainer">
-             <div class="photo"> <img src="/assets/img/services/floor.jpg">
+             <div class="photo"> <img src="assets/img/services/floor.jpg">
                  <!-- <div class="photos">Photos</div> -->
              </div>
 
@@ -488,7 +488,7 @@
       <div class="row">
         <div class="col-lg-3">
           <div class="card" >
-            <img src="/assets/img/alproducts/floor.jpg" class="card-img-top" alt="...">
+            <img src="assets/img/alproducts/floor.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">All Floor</h5>
               <button class="button-71" role="button"><a href="">Read More
@@ -501,7 +501,7 @@
         </div>
         <div class="col-lg-3">
           <div class="card" >
-            <img src="/assets/img/alproducts/table.jpeg" class="card-img-top" alt="...">
+            <img src="assets/img/alproducts/table.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Table Top Surface</h5>
               <button class="button-71" role="button"><a href="">Read More
@@ -514,7 +514,7 @@
         </div>
         <div class="col-lg-3">
           <div class="card" >
-            <img src="/assets/img/alproducts/bathroom.jpeg" class="card-img-top" alt="...">
+            <img src="assets/img/alproducts/bathroom.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Bathroom</h5>
               <button class="button-71" role="button"><a href="">Read More
@@ -528,7 +528,7 @@
         </div>
         <div class="col-lg-3">
           <div class="card">
-            <img src="/assets/img/alproducts/shelves.jpeg" class="card-img-top" alt="..." style="height: 175px;">
+            <img src="assets/img/alproducts/shelves.jpeg" class="card-img-top" alt="..." style="height: 175px;">
             <div class="card-body">
               <h5 class="card-title">All Racks Shelves</h5>
               <button class="button-71" role="button"><a href="">Read More
